# marin

./: .config  .dockerignore  .forge-state.json  .gitattributes  .gitignore  .gitmodules  .levanter.yaml  .mcp.json  .nfs000000000002078600015452  .nfs000000000002df2100015453  .nfs00000000000b5d74000167a6  .nfs00000000000b5d75000167a7  .nfs00000000000b5e0b000167a8  .nfs00000000000b5e10000167a9  .nfs000000000033a0f200016162  .nfs000000000033a9a000016163  .pre-commit-config.yaml  .pre-commit-pyrefly.sh  .pyrefly-baseline.json  .rayignore  .readthedocs.yaml  .test_durations  .visible-env  130m_1_4.sh  130m_20k.sh  130m_20k_2.sh  130m_20k_3.sh  130m_4_1.sh  130m_4_2.sh  130m_4_3.sh  130m_5k.sh  130m_5k_2.sh  1B_test.sh  520m_1.sh  520m_2.sh  764_1.sh  =0.26.0  AGENTS.md  AUTHORS.md  AUTO_LIBRA.md  (+228 more)
data_browser/: .gitignore  Dockerfile  Dockerfile.prod  README.md  browser.py  deploy.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run-dev.py  server.py  wsgi.py
data_browser/conf/: docker.conf  gcp.conf  local.conf
data_browser/public/: index.html  manifest.json
data_browser/src/: App.js  ExperimentPage.js  HomePage.js  NavBar.js  ViewPage.js  index.css  setupProxy.js  utils.js
infra/probes/: README.md  pyproject.toml
infra/probes/deploy/: Dockerfile  Dockerfile.dockerignore  deploy.py  deploy.sh
infra/probes/src/: cluster.py  infra_probes.py  marin_infra_probes.py  provisioning.py  result.py  runner.py  sample.py  sinks.py
infra/probes/tests/: test_checks.py  test_cluster.py  test_daemon_once.py  test_probe_types.py  test_provisioning.py  test_runner.py  test_sample.py  test_sinks.py  test_sqlite_store.py
lib/buoy/: AGENTS.md  README.md  pyproject.toml
lib/buoy/dashboard/: env.d.ts  package-lock.json  package.json  rsbuild.config.ts  tailwind.config.ts
lib/buoy/tests/: conftest.py  fakes.py  test_app.py  test_mirror.py  test_xprof.py
lib/cluster/: pyproject.toml
lib/cluster/tests/: test_admin_config.py  test_cli.py  test_config.py  test_login.py
lib/ducky/: README.md  pyproject.toml
lib/ducky/dashboard/: package-lock.json  package.json  rsbuild.config.ts  tailwind.config.ts  tsconfig.json
lib/ducky/tests/: test_client.py  test_config.py  test_deploy.py  test_runner.py  test_server.py  test_tunnel.py
lib/dupekit/: Cargo.toml  README.md  build_package.py  dupekit.pyi  pyproject.toml
lib/dupekit/dupekit/: __init__.py  __init__.pyi  dupekit.pyi
lib/dupekit/rust/: Cargo.toml
lib/dupekit/src/: dedupe.rs  hashing.rs  lib.rs  marshaling.rs  minhash_ops.rs  ops.rs  pipeline.rs
lib/dupekit/tests/: api_test.py  test_bloom.py  test_dedupe.py  test_hashing.py  test_minhash.py  test_text_cleaning.py
lib/fakeray/: README.md  pyproject.toml  pytest.ini
lib/fakeray/examples/: skyrl_min.py  skyrl_real_pg.py
lib/fakeray/ray-shim/: pyproject.toml
lib/fakeray/tests/: test_actors_local.py  test_scheduler_local.py
lib/finelog/: AGENTS.md  OPS.md  buf.gen.yaml  buf.yaml  build_package.py  package-lock.json  package.json  pyproject.toml
lib/finelog/benchmarks/: query_bench.py
lib/finelog/config/: cw-us-east-02a.yaml  marin-dev.yaml  marin.yaml
lib/finelog/dashboard/: package-lock.json  package.json  rsbuild.config.ts
lib/finelog/deploy/: Dockerfile  Dockerfile.dockerignore  README.md
lib/finelog/rust/: Cargo.toml  build.rs  finelog_server.pyi  pyproject.toml
lib/finelog/scripts/: bench_dashboard_queries.py  finelog_gcs_query.py  generate_protos.py  safe_deploy.py
lib/finelog/tests/: _bench_log_encode.py  conftest.py  test_asgi.py  test_catalog_stats.py  test_client.py  test_compactor.py  test_concurrency.py  test_config.py  test_deploy_cli.py  test_deploy_k8s.py  test_drop.py  test_duckdb_store.py  test_durable_writes.py  test_embedded.py  test_eviction.py  test_interceptors.py  test_layout_migration.py  test_mem_store.py  test_migrations.py  test_offload.py  test_persistence.py  test_query.py  test_ram_buffers.py  test_register.py  test_server.py  test_stats_query_drop.py  test_stats_service.py  test_storage_policy.py  test_write_rows.py
lib/fluster/: AGENTS.md  README.md  buf.gen.yaml  buf.yaml  pyproject.toml  worker-fixup.md  worker-impl.md
lib/fluster/docs/: actor.md  client-submit.md  cluster-logging.md  cluster-tuneup.md  container-runtime.md  context-management-v0.md  controller-class.md  controller-v0.md  controller-v1.md  controller.md  fray-zero-actor-and-resolver.md  impl-recipe.md  name-redesign.md  offline-dashboard-design.md  retry-handling.md  thread-namespace.md  worker.md
lib/fluster/examples/: cluster_example.py  demo.ipynb  demo_cluster.py  simple_controller_example.py  worker_example.py  worker_pool_test.py
lib/fluster/scripts/: generate_protos.py
lib/fluster/tests/: conftest.py  test_context.py  test_worker_pool.py
lib/fray/: AGENTS.md  Cargo.toml  README.md  architecture.md  buf.gen.yaml  buf.yaml  fray_rpc.pyi  pyproject.toml
lib/fray-rusty/: Cargo.toml  README.md  pyproject.toml
lib/fray-rusty/proto/: fray.proto
lib/fray-rusty/src/: lib.rs
lib/fray/docs/: controller-v0.md  design.md  fix-ray-local.md  fray-implementation.md  fray-lite-design.md  fray-lite-research.md  fray-zero.md  namespacing.md  training-v2.md  v2-context-detection.md
lib/fray/examples/: inference_pool.py
lib/fray/proto/: fray.proto
lib/fray/rust_src/: lib.rs
lib/fray/scripts/: generate_proto.sh
lib/fray/tests/: __init__.py  conftest.py  sitecustomize.py  test_actor.py  (+26 more)
lib/grugfuzz/: pyproject.toml
lib/grugpt/: pyproject.toml
lib/iris/: .dockerignore  AGENTS.md  DESIGN.md  Dockerfile  Dockerfile.controller  Dockerfile.dockerignore  Dockerfile.task  Dockerfile.worker  OPS.md  README.md  TESTING.md  autoscaler-demand.md  buf.gen.yaml  buf.yaml  hatch_build.py  package-lock.json  package.json  pyproject.toml
lib/marin/: AGENTS.md  pyproject.toml
lib/ml-flow/: README.md  pyproject.toml
lib/rigging/: pyproject.toml
lib/zephyr/: AGENTS.md  OPS.md  README.md  pyproject.toml
rust/: Cargo.toml
rust/dupekit/: Cargo.toml  README.md  build_package.py  pyproject.toml
rust/finelog/: Cargo.toml
(+47849 files in other folders)
