[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin"
version = "0.1.0"
description = "Marin: scalable data curation and training for foundation models"
license = { file = "LICENSE" }
requires-python = ">=3.11"

authors = [
    { name = "David Hall", email = "dlwh@cs.stanford.edu" },
    { name = "Jason Wang", email = "jsywang@cs.stanford.edu" },
    { name = "Ahmed Ahmed" },
    { name = "Ivan Zhou", email = "ivanz@stanford.edu" },
    { name = "Will Held" },
    { name = "Virginia Adams" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
]

dependencies = [
    # --- rigging (filesystem / logging utilities) ---
    "fsspec>=2024.2,<2026",
    "gcsfs>=2024.2,<2026",
    "s3fs>=2024",
    # --- zephyr (dataset library) ---
    "braceexpand>=0.1.7",
    "cloudpickle>=3.1.2",
    "humanfriendly>=10.0",
    "msgspec>=0.18.0",
    "numpy>=2.0",
    "tqdm-loggable>=0.2",
    "typing-extensions>=4.0",
    "vortex-data>=0.61.0",
    "zstandard>=0.22.0",
    # --- marin core (data processing, configs, utilities) ---
    "click>=8.3.1",
    "cryptography>=45",
    "datasets>=3.1.0,<5.0",
    "ddsketch",
    "draccus>=0.11.5",
    "floret",
    "google-api-python-client>=2.175.0",
    "google-cloud-storage",
    "google-cloud-storage-transfer",
    "lxml[html_clean]",
    "lz4",
    "markdownify==0.12.1",
    "multiprocess==0.70.16",
    "openai",
    "pandas>=2.0",
    "plotly",
    "pyarrow>=22",
    "pydantic>=2.12.5,<3",
    "pyyaml>=6.0",
    "regex",
    "requests",
    "resiliparse>=0.17.2",
    "toml",
    "tqdm",
    "warcio",
]


[project.scripts]
iris = "iris.cli:iris"
iris-run = "iris.cli.run:run"
fray = "fray.v1.cli:main"
zephyr = "zephyr.cli:main"


[project.optional-dependencies]

# --- Dependency tiers ---

# Training: haliax + levanter (JAX/ML training stack)
training = [
    "aqtp>=0.8.2",
    "async-lru~=2.0",
    "dataclasses-json~=0.6.4",
    "deepdiff",
    "einops",
    "equinox>=0.10.6,!=0.12.0",
    "filelock~=3.13",
    "immutabledict",
    "jax>=0.8.0",
    "jaxopt>=0.8.3",
    "jaxtyping>=0.2.34",
    "jinja2",
    "jmp>=0.0.4",
    "lenses",
    "optax>=0.1.9",
    "protobuf>=6,<7",
    "pytimeparse>=1.1.8",
    "safetensors>=0.4.3",
    "safetensors[numpy]>=0.4.2,<0.7.0",
    "tblib>=1.7.0,<4.0.0",
    "tensorstore>=0.1.73",
    "tokenizers>=0.15.2",
    "transformers>=4.57.1,<5.0",
    "wandb>=0.17.8",
]

# Cluster: iris + fray + ray (distributed execution)
cluster = [
    "connect-python>=0.9.0",
    "fastapi>=0.100.0",
    "flask",
    "grpcio>=1.76.0",
    "httpx>=0.28.1",
    "mergedeep",
    "PyJWT>=2.8.0",
    "ray[default]==2.53.0",
    "starlette>=0.50.0",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.23.0",
]

# Full: everything needed for internal marin development
full = [
    "marin[training,cluster]",
    "dupekit>=0.1.0",
    "watchdog",
]

# --- Hardware variants ---

# GPU: combined from levanter + marin
gpu = [
    "marin[training]",
    "jax[cuda12]>=0.8.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
]

# TPU: combined from levanter + marin
tpu = [
    "marin[training]",
    "jax[tpu]>=0.8.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
]

# CPU: from marin
cpu = [
    "marin[training]",
    "jax>=0.8.0",
    "torch==2.9.0",
    # Linux x86_64
    "torchvision==0.24.0+cpu; sys_platform == 'linux' and platform_machine == 'x86_64'",
    # Windows x86_64 (AMD64)
    "torchvision==0.24.0+cpu; sys_platform == 'win32' and platform_machine == 'AMD64'",
    # Linux aarch64, macOS arm64: PyPI default wheel
    "torchvision==0.24.0; (sys_platform == 'linux' and platform_machine == 'aarch64') or (sys_platform == 'darwin' and platform_machine == 'arm64')",
]

# iris controller extras
controller = [
    "duckdb>=1.0.0",
    "pyarrow>=19.0.0",
]

# fray ray extra
fray_ray = ["ray==2.53.0"]

# levanter extras
torch_test = [
    "torch>=2.7.0",
    "peft>=0.12.0",
]

profiling = [
    "xprof",
    "tensorboard>=2.16",
    "tensorboardX>=2.6",
]

serve = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "openai>=1.0.0",
]

lm_eval = [
    "lm-eval@git+https://github.com/stanford-crfm/lm-evaluation-harness.git@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
]

kernels = [
    "tokamax",
]

gcp = [
    "google-api-python-client>=2.175.0",
    "google-cloud-storage",
    "google-cloud-storage-transfer",
    "google-auth",
    "google-cloud-compute",
]

# marin extras
rl = [
    "prime",
    "sympy>=1.12.1,<1.14",
    "verifiers==0.1.5",
]

eval = [
    "lm-eval[math,api]@git+https://github.com/stanford-crfm/lm-evaluation-harness@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
]

evalchemy = [
    "lm-eval[math]@git+https://github.com/stanford-crfm/lm-evaluation-harness@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
    "sympy>=1.12.1,<1.14",
    "antlr4-python3-runtime==4.11",
    "bespokelabs-curator",
    "sqlalchemy",
    "fire",
]

vizier = [
    "google-vizier[jax]",
]

vllm = [
    "vllm-tpu==0.13.2.post6",
    "triton==3.5.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
]

harbor = [
    "harbor>=0.1.42",
]

dedup = [
    "dupekit",
]

math = ["pylatexenc", "sympy>=1.12.1,<1.14"]

data_browser = ["zstandard==0.23.0"]

pm = [
    "PyGithub>=2.3.0",
]


[dependency-groups]

test = [
    "pytest>=8.3.2",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-cov",
    "pytest-profiling",
    "pytest-forked",
    "pip",
    "openai-responses",
    "plotly",
    "soundfile",
    "librosa>=0.11.0",
    "tensorboardX>=2.6",
    "chex>=0.1.86",
    "httpx>=0.28.1",
    "trackio>=0.5.0",
    "numba>=0.62.1",
    "psutil>=5.9.0",
    "numpy",
]

lint = [
    "ruff==0.14.3",
    "black==25.9.0",
    "mypy>=1.4.1",
    "pyrefly==0.40.0",
    "types-PyYAML",
    "types-requests",
    "types-six",
    "click>=8.0",
    "pyyaml>=6.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "pygments",
]

math = ["pylatexenc", "sympy>=1.12.1,<1.14"]

metrics = ["google-cloud-logging"]

iris_examples = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
]

iris_dev = [
    "duckdb>=1.0.0",
    "pyarrow>=19.0.0",
    "pillow>=10.0.0",
    "playwright>=1.49.0",
    "pytest-flakefinder>=1.1.0",
    "pytest-playwright>=0.6.2",
    { include-group = "iris_examples" },
]

fray_test = [
    "numpy",
    "pip",
    "pytest-timeout",
    "pytest>=8.3.2",
    "ray[default]",
]

fray_tpu_test = ["jax[tpu]", { include-group = "fray_test" }]

levanter_dev = [
    "pygments",
    "click>=8.0.0",
    "prompt_toolkit>=3.0.0",
    "matplotlib>=3.7.0",
]

haliax_dev = [
    "pre-commit",
]

dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
    { include-group = "math" },
    { include-group = "iris_dev" },
    { include-group = "levanter_dev" },
]


[tool.uv]
fork-strategy = "fewest"
find-links = ["https://github.com/marin-community/marin/releases/expanded_assets/dupekit-0.1.0-40ac799"]
override-dependencies = [
    "omegaconf>=2.4.0.dev4",
    "antlr4-python3-runtime==4.11",
    "python-multipart>=0.0.22",
    "wheel>=0.46.2",
    "datasets>=3.1.0,<4.0.0",
    "equinox>=0.11.10",
]

conflicts = [
    [
        { extra = "gpu" },
        { extra = "tpu" },
    ],
    [
        { extra = "gpu" },
        { extra = "cpu" },
    ],
    [
        { extra = "vllm" },
        { extra = "cpu" },
    ],
    [
        { extra = "vllm" },
        { extra = "cuda12" },
    ],
]

[tool.uv.sources]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cpu", extra = "tpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]
resiliparse = { index = "marin-resiliparse" }
torch = [
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cpu", extra = "tpu" },
]
harbor = { git = "https://github.com/marin-community/harbor.git", rev = "354692d9c0eab497b05f266aa0dff30e2a238d2e" }

[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.black]
line-length = 121
target-version = ["py310"]
preview = true

extend-exclude = """
(
    scripts/
)
"""

[tool.ruff]
line-length = 121
target-version = "py310"

extend-exclude = ["scripts/"]

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "NPY", "RUF", "UP", "W"]
ignore = ["F722", "B008", "UP015", "A005", "I001", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
# levanter and haliax had broader ignores and didn't select A/B/NPY/RUF/UP rules
"src/levanter/**" = ["A", "B", "E203", "E501", "E266", "E731", "F821", "NPY", "RUF", "UP", "W605"]
"src/haliax/**" = ["A", "B", "E203", "E501", "E266", "E731", "F821", "NPY", "RUF", "UP", "W605"]
"lib/levanter/**" = ["A", "B", "E203", "E501", "E266", "E731", "F821", "NPY", "RUF", "UP", "W605"]
"lib/haliax/**" = ["A", "B", "E203", "E501", "E266", "E731", "F821", "NPY", "RUF", "UP", "W605"]
"tests/levanter/**" = ["A", "B", "E203", "E501", "E266", "E731", "F821", "NPY", "RUF", "UP", "W605"]
"tests/haliax/**" = ["A", "B", "E203", "E501", "E266", "E731", "F821", "NPY", "RUF", "UP", "W605"]

[tool.mypy]
python_version = "3.10"

ignore_missing_imports = true
exclude = ["marin/", "scripts/"]

# Pyrefly type checker configuration
[tool.pyrefly]
project-includes = [
    "src/**/*.py",
]

search-path = ["src"]
disable-search-path-heuristics = true

skip-interpreter-query = true
use-ignore-files = false
disable-project-excludes-heuristics = true

project-excludes = [
    "experiments/**",
    "scripts/**",
    "tests/**",
    "examples/**",
    "src/**/crawl/**",
    "src/iris/rpc/*_pb2*",
    "src/iris/rpc/*_connect.py",
    "**/node_modules",
    "**/__pycache__",
    "**/venv/**",
]

[tool.pyrefly.errors]
missing-import = false
unexpected-keyword = false
missing-attribute = false
deprecated = false
unknown-name = false
not-iterable = false
no-matching-overload = false
bad-index = false
bad-argument-type = false
bad-context-manager = false
missing-argument = false
bad-argument-count = false
unbound-name = false


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = [
    "src/iris",
    "src/fray",
    "src/haliax",
    "src/levanter",
    "src/marin",
    "src/rigging",
    "src/zephyr",
    "experiments",
]
# Include generated protobuf files (gitignored but needed at runtime)
artifacts = [
    "src/iris/rpc/*_pb2.py",
    "src/iris/rpc/*_pb2.pyi",
    "src/iris/rpc/*_connect.py",
]

[tool.hatch.build.targets.sdist]
packages = [
    "src/iris",
    "src/fray",
    "src/haliax",
    "src/levanter",
    "src/marin",
    "src/rigging",
    "src/zephyr",
    "experiments",
]

[tool.hatch.version]
path = "src/haliax/__about__.py"

[tool.pytest.ini_options]
timeout = 60
filterwarnings = ["ignore::DeprecationWarning"]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: mark tests as slow for CI - use -m 'not slow'",
    "tpu_ci: mark tests that require a TPU",
    "integration: mark tests as integration tests that require cluster infrastructure",
    "entry: marks tests as entry point tests",
    "ray: marks tests that require Ray",
    "torch: mark tests that use Torch",
    "tpu: mark tests that require TPU",
    "docker: marks tests requiring Docker runtime",
    "e2e: end-to-end cluster tests",
]
testpaths = ["tests", "experiments"]
pythonpath = ["."]

addopts = "--session-timeout=480 -m 'not tpu_ci and not slow'"
