[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-root"
version = "0.1.0"
description = "Marin workspace root and experiments"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    # workspaces
    "marin-iris",
    "marin-fray",
    "marin-haliax",
    "marin-levanter",
    "marin",
    "marin-rigging",
    "marin-zephyr",
    # top level deps. try to keep these small.
    "watchdog",
    "dupekit >= 0.1.0",
]

[tool.uv]
fork-strategy = "fewest"
find-links = [
    "https://github.com/marin-community/marin/releases/expanded_assets/dupekit-0.1.0-40ac799",
    "https://github.com/marin-community/kitoken/releases/expanded_assets/kitoken-0.10.2-a3012f4",
]
override-dependencies = [
    "omegaconf>=2.4.0.dev4",
    "antlr4-python3-runtime==4.11",
    "python-multipart>=0.0.22",
    "wheel>=0.46.2",
    "datasets>=3.1.0,<4.0.0",
    "equinox>=0.11.10",  # Override vizier's pin for JAX 0.8 compatibility
]

[tool.uv.workspace]
members = [
    "lib/iris",
    "lib/fray",
    "lib/haliax",
    "lib/levanter",
    "lib/marin",
    "lib/rigging",
    "lib/zephyr",
]

[tool.uv.sources]
marin-iris = { workspace = true }
marin-fray = { workspace = true }
marin-haliax = { workspace = true }
marin-levanter = { workspace = true }
marin = { workspace = true }
marin-rigging = { workspace = true }
marin-zephyr = { workspace = true }
# NOTE: harbor is a pinned git dependency (not a workspace member).
# harbor lives in marin-community/harbor as a pinned git dependency.
harbor = { git = "https://github.com/marin-community/harbor.git", rev = "354692d9c0eab497b05f266aa0dff30e2a238d2e" }
# ### BEGIN RUST-DEV SOURCES ###
# ### END RUST-DEV SOURCES ###


[tool.black]
line-length = 121
target-version = ["py310"]
preview = true

# Note :: Grow more strict over time!
extend-exclude = """
(
    scripts/
)
"""

[tool.ruff]
line-length = 121
target-version = "py310"

# Note :: Grow more strict over time!
extend-exclude = ["scripts/"]

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "NPY", "RUF", "UP", "W"]
ignore = ["F722", "B008", "UP015", "A005", "I001", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.mypy]
python_version = "3.10"

# Note: Grow more strict over time!
ignore_missing_imports = true
exclude = ["marin/", "scripts/"]

# Pyrefly type checker configuration
[tool.pyrefly]
# Worktrees often live under hidden parent directories (e.g. `.codex/worktrees/*`).
# Disable pyrefly's built-in exclude heuristics so hidden ancestors do not exclude
# the entire project when running from those paths.
disable-project-excludes-heuristics = true

project-includes = [
    "lib/marin/src/**/*.py",
    "lib/levanter/src/**/*.py",
    "lib/haliax/src/**/*.py",
    "lib/fray/src/**/*.py",
    "lib/iris/src/**/*.py",
    "lib/rigging/src/**/*.py",
    "lib/zephyr/src/**/*.py",
]

# Explicitly tell Pyrefly where our editable packages live so it resolves imports
# against the library sources instead of the top-level `src` directory, which only
# contains a handful of legacy modules.
search-path = [
    "lib/marin/src",
    "lib/levanter/src",
    "lib/haliax/src",
    "lib/rigging/src",
    "lib/zephyr/src",
    "lib/fray/src",
    "lib/iris/src",
    # Project-local stub packages. Currently holds a minimal jaxtyping shim
    # so that `Float[Array, "..."]` etc. resolve without pulling in
    # jaxtyping's runtime shape DSL.
    "stubs",
]
disable-search-path-heuristics = true

# Third-party imports live in the project's uv-managed venv. Pointing pyrefly
# at this explicit path (rather than interpreter query) lets numpy/pandas/
# requests/click/pydantic/etc. resolve via their shipped py.typed metadata.
# Untyped libs (jax, equinox, optax, ray, …) still fall through to
# missing-import, which is deliberately boundary-suppressed below.
site-package-path = [".venv/lib/python3.11/site-packages"]

# Prevent pyrefly from querying the Python interpreter for site-packages
# which would auto-detect workspace members as site packages and exclude them
skip-interpreter-query = true
use-ignore-files = false

# Exclude non-production code from type checking
project-excludes = [
    "experiments/**",
    "scripts/**",
    "tests/**",
    "examples/**",           # Example code doesn't need strict typing
    "lib/**/crawl/**",       # Crawl scripts have library typing issues with smart_open
    "lib/iris/src/iris/rpc/*_pb2*",  # Generated protobuf files
    "lib/iris/src/iris/rpc/*_connect.py",  # Generated Connect RPC files
    # Keep key excludes that pyrefly normally adds heuristically.
    "**/node_modules",
    "**/__pycache__",
    "**/venv/**",
]

[tool.pyrefly.errors]

# `missing-import` is a deliberate *boundary* suppression, not a "we gave up"
# disable. Even after adding site-packages to `site-package-path` above and
# shipping a project-local `jaxtyping` stub under `stubs/`, the ML/infra
# stack used in Marin ships without type information in:
#   jax (incl. jax.experimental, jax.sharding, jax.numpy, jax.tree_util),
#   equinox, optax, ray, flax, chex, jmp, tensorstore,
#   vllm, lm_eval, connectrpc (proto-generated), draccus, cloudpickle,
#   humanfriendly, tqdm_loggable, dupekit, harbor, trackio, mergedeep,
#   fsspec (partial), transformers (partial), google.* (partial).
# Writing local stubs for each is high cost / low signal (surface area of
# `jax` + `equinox` alone dwarfs Marin's own typed API). Per-site
# `# pyrefly: ignore[missing-import]` would mean ~1.2k comments for zero
# additional information beyond this list. We therefore keep the category
# disabled globally and revisit whenever the upstream `py.typed` story
# changes.
missing-import = false

# PR-3 scope removed these categories:
#   missing-attribute (was false)  → re-enabled, residual items baselined
#   unknown-name (was false)       → re-enabled, residual items baselined
#   missing-module-attribute       → cleared + re-enabled in PR-3

# Untouched-for-now: keep disabled until cluster B (PR-4) triages them.
unexpected-keyword = false
no-matching-overload = false
bad-argument-type = false
missing-argument = false
bad-argument-count = false

# Keep these enabled to catch real type errors:
# bad-override = true (126 occurrences)
# bad-assignment = true (94 occurrences)
# bad-return = true (84 occurrences)
# unsupported-operation = true (68 occurrences)
# not-callable = true (27 occurrences)
# unbound-name, not-iterable, bad-index, bad-context-manager: re-enabled in PR-1
# invalid-annotation, not-a-type, invalid-type-var, invalid-variance,
# invalid-inheritance: re-enabled in PR-0
# bad-specialization, inconsistent-overload: cleared in PR-2 (helper + per-site)
# missing-attribute, unknown-name, missing-module-attribute: re-enabled in PR-3

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["experiments"]

[tool.hatch.build.targets.sdist]
packages = ["experiments"]

[tool.pytest.ini_options]
timeout = 60
filterwarnings = ["ignore::DeprecationWarning"]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: mark tests as slow for CI - use -m 'not slow'",
    "tpu_ci: mark tests that require a TPU",
    "integration: mark tests as integration tests that require cluster infrastructure",
]
testpaths = ["tests", "experiments"]

# Don't run TPU, slow, or integration tests by default. Integration tests
# require external infrastructure (Iris cluster, GCS, gated HF repos, etc.)
# and are run from dedicated CI workflows.
addopts = "--session-timeout=480 -m 'not tpu_ci and not slow and not integration'"
