[tool.poetry]
name = "data-browser"
version = "0.1.0"
description = "Marin Data Browser"
authors = ["Marin Team"]

[tool.poetry.dependencies]
python = "^3.11"
py7zr = "^0.22.0"
fsspec = "^2024.9.0"
zstandard = "^0.23.0"
flask = "^3.1.1"
pyarrow = "^17.0.0"
gcsfs = "^2024.9.0.post1"
pandas = "^2.2.2"
draccus = "^0.9.3"
s3fs = "^2024.12.0"
gunicorn = "^23.0.0"
flask-limiter = "^3.10.1"


[tool.poetry.group.dev.dependencies]
honcho = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
