[workspace]
members = ["dupekit", "finelog", "finelog/pyext"]
resolver = "2"

# Thin LTO + parallel codegen. Within ~1% of fat-LTO runtime, but builds in a
# fraction of the time: fat LTO + codegen-units=1 is a single-threaded
# multi-minute link over the whole datafusion/arrow tree. Applies to every
# workspace member — the dupekit and finelog wheels, the finelog-server binary,
# and the finelog/pyext cdylib.
[profile.release]
lto = "thin"
codegen-units = 16
strip = "symbols"

# Even-faster iteration profile for dev/test deploys (e.g. marin-dev): drops LTO
# entirely and opt-level to 2 on top of release's parallel codegen. Still
# optimized enough to be representative.
[profile.fast]
inherits = "release"
lto = false
opt-level = 2
