[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-infra-probes"
version = "0.1.0"
description = "Synthetic infra monitoring: continuously exercises Iris and Finelog, records latency and error samples."
requires-python = ">=3.11,<3.13"
# marin-* libs are not published to PyPI past a one-time bootstrap; the real
# distribution channel is the per-package rolling GH release. Pinning the
# floor at 0.99.dev0 + prerelease=allow + find-links picks up today's nightly.
dependencies = [
    "marin-iris    >= 0.99.dev0",
    "marin-finelog >= 0.99.dev0",
    "marin-rigging >= 0.99.dev0",
]

[project.scripts]
probes = "probes:main"

[dependency-groups]
dev = ["pytest >= 8.4"]

[tool.uv]
prerelease = "allow"
find-links = [
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-iris-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-finelog-latest",
    "https://github.com/marin-community/marin/releases/expanded_assets/marin-rigging-latest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/probes"]

[tool.pytest.ini_options]
timeout = 30
timeout_method = "thread"
addopts = "--durations=10 -v"
filterwarnings = ["ignore::DeprecationWarning"]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(name)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
