[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-infra-probes"
version = "0.1.0"
description = "Synthetic infra monitoring: continuously exercises Iris and Finelog, records latency and error samples."
requires-python = ">=3.12,<3.14"
# marin-* libs ship to PyPI nightly (marin-release-libs-wheels.yaml for
# iris/rigging, finelog-release-wheels.yaml for finelog). prerelease=allow lets
# the `0.2.x.devYYYYMMDDhhmm` nightlies resolve; `uv lock -U` picks up the
# latest. (The old GH `*-latest` rolling releases are abandoned/frozen.)
dependencies = [
    "marin-iris    >= 0.2.0",
    "marin-finelog >= 0.2.0",
    "marin-rigging >= 0.2.0",
    "click >= 8.0",
]

[project.scripts]
probes = "infra_probes:main"

[dependency-groups]
dev = ["pytest >= 8.4"]

[tool.uv]
prerelease = "allow"

[tool.hatch.build.targets.wheel]
# Ship the whole package; an explicit per-file list silently drops new modules
# from the wheel, so `python -m infra_probes` ImportErrors at container start.
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
timeout = 30
timeout_method = "thread"
addopts = "--durations=10 -v"
filterwarnings = ["ignore::DeprecationWarning"]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(name)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
